# ChangeLog for media-gfx/fotoxx
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  12 Nov 2008; Robert Steen (Gandalf) <gandalf@vebbe.se> +fotoxx-5.6.ebuild:
  Version bumb for fotoxx. Keeping previous version as this version is
  experimental

  31 Oct 2008; Robert Steen (Gandalf) <gandalf@vebbe.se>
  -fotoxx-5.4.1.ebuild, +fotoxx-5.5.ebuild:
  Version bumb for Fotoxx.

  15 Oct 2008; Robert Steen (Gandalf) <gandalf@vebbe.se> -fotoxx-5.4.ebuild,
  +fotoxx-5.4.1.ebuild:
  Version bumb for Fotoxx.

  09 Oct 2008; Robert Steen (Gandalf) <gandalf@vebbe.se>
  -fotoxx-5.3.1.ebuild, +fotoxx-5.4.ebuild:
  Version bumb for Fotoxx.

  29 Sep 2008; Robert Steen (Gandalf) <gandalf@vebbe.se> -fotoxx-5.3.ebuild,
  +fotoxx-5.3.1.ebuild:
  Version bumb for fotoxx.

  18 Sep 2008; Robert Steen (Gandalf) <gandalf@vebbe.se>
  -fotoxx-5.2.4.ebuild, +fotoxx-5.3.ebuild:
  Version bumb for fotoxx.

  09 Sep 2008; Robert Steen (Gandalf) <gandalf@vebbe.se>
  -fotoxx-5.2.2.ebuild, +fotoxx-5.2.4.ebuild:
  Version bumb for fotoxx.

  08 Sep 2008; Robert Steen (Gandalf) <gandalf@vebbe.se>
  -fotoxx-5.2.1.ebuild, +fotoxx-5.2.2.ebuild:
  Version bumb for fotoxx.

  03 Sep 2008; Robert Steen (Gandalf) <gandalf@vebbe.se>
  +fotoxx-5.2.1.ebuild, +metadata.xml:
  New Ebuild for bug 235961 thanks to dzhus and chithead for all help
