@@ -1,6 +1,4 @@
-DIST fotoxx-5.5.tar.gz 1441256 RMD160 6dfe5d656ca86950270deba66f071e6f4a98509f SHA1 f51d647d1af62dc5b21d867f507949146b8990c6 SHA256 ebeea2ee8ca8a18c4570c5c4621cb8cb3230bc0e7dba9b6f292432b6772e663e
-DIST fotoxx-5.6.tar.gz 1498056 RMD160 4217834b981731d5859b6b6e53d5cb7c78b39d39 SHA1 ac8e15def75bf441bceac27a2e00c344353fc945 SHA256 de1cdd4ac8723121d5e55fab4fc04376a0bae707ddedca5a3ec499426b678f76
-EBUILD fotoxx-5.5.ebuild 755 RMD160 37da1cc736245e75574e13a911620e8ad2ecf7cb SHA1 50483cabffa9c24590eb8256d77a30d381dbb572 SHA256 c35fb46cfcc8b45ab48a035127aad8ec59445db8e403dca7e62c20feaf953044
-EBUILD fotoxx-5.6.ebuild 755 RMD160 37da1cc736245e75574e13a911620e8ad2ecf7cb SHA1 50483cabffa9c24590eb8256d77a30d381dbb572 SHA256 c35fb46cfcc8b45ab48a035127aad8ec59445db8e403dca7e62c20feaf953044
-MISC ChangeLog 1355 RMD160 f42b2ad2b963bc3978f680c2b74055af16feebe5 SHA1 e699fd5349f9c7c1dc8d03535f41240be742f7e1 SHA256 37a7970aa5c6a7338c78c492a7b195a407d84243534bbeb4d5629f20242d1b06
+DIST fotoxx-5.6.1.tar.gz 1513926 RMD160 c82021c18b1ad60ced7b50c713283206a418cfa5 SHA1 1651ba1d8e8fecba624b51cb139b91292936b5a0 SHA256 685e558e25807a0653fbac6dbbcbf24ff14791ce2ef7340c82a60388af16a5b5
+EBUILD fotoxx-5.6.1.ebuild 755 RMD160 37da1cc736245e75574e13a911620e8ad2ecf7cb SHA1 50483cabffa9c24590eb8256d77a30d381dbb572 SHA256 c35fb46cfcc8b45ab48a035127aad8ec59445db8e403dca7e62c20feaf953044
+MISC ChangeLog 1504 RMD160 87e06de56d854ea2e2198e5c8c87004ac1c3480e SHA1 2a0aca2231bc47b5c71f65c06683580696aab8e6 SHA256 d6451c378c3d53debbb12dbdf38cc464da48f0f125c4149e23facaacedf32c46
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
