@@ -1,30 +1,0 @@
-# Copyright 1999-2008 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: $
-
-inherit eutils
-
-DESCRIPTION="Program for improving image files made with a digital camera."
-HOMEPAGE="http://kornelix.squarespace.com/fotoxx"
-SRC_URI="http://kornelix.squarespace.com/storage/${PN}/${P}.tar.gz"
-
-LICENSE="GPL-2"
-SLOT="0"
-KEYWORDS="~amd64 ~x86"
-IUSE=""
-
-DEPEND=">=x11-libs/gtk+-2.8"
-RDEPEND="${DEPEND}
-	media-gfx/exiv2
-	>=media-gfx/printoxx-1.2"
-
-S=${WORKDIR}/${PN}
-
-src_compile() {
-	emake PREFIX=/usr || die "build failed"
-}
-
-src_install() {
-	emake DESTDIR="${D}" PREFIX=/usr install || die "emake install failed"
-	make_desktop_entry ${PN} "Fotoxx" /usr/share/${PN}/icons/${PN}.png "Application;Graphics;2DGraphics;"
-}
