@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  19 Nov 2008; Robert Steen (Gandalf) <gandalf@vebbe.se> -fotoxx-5.5.ebuild,
+  -fotoxx-5.6.ebuild, +fotoxx-5.6.1.ebuild:
+  Version bumb for Fotoxx.
+
   12 Nov 2008; Robert Steen (Gandalf) <gandalf@vebbe.se> +fotoxx-5.6.ebuild:
   Version bumb for fotoxx. Keeping previous version as this version is
   experimental
